// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusModelEditorMessages.protobuf;

message PusParameter {
extensions 6 to 106;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.STRING parameterName = 2;
  optional ccsds_mal.protobuf.STRING value = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeParameterId = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeParameterId = 5;
}
